--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@
 }
 
 body{
-    height: 100vh;
+    height: 1600px;
     background-image: linear-gradient(to bottom,
     #1f2937 0%,
-    #1f2937 45%,
-    white 45%,
-    white 75%,
+    #1f2937 25%,
+    white 25%,
+    white 50%,
+    #e5e7eb 50%,
     #e5e7eb 75%,
-    #e5e7eb 90%,
-    white 90%,
+    white 75%,
     white 100%);
 }
 
@@ -20,11 +20,16 @@ body{
     color: #f9faf8;
 }
 
+.header-section{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    height: 400px;
+}
 .header{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    margin: 0 50px;
 }
 
 .header .links{
@@ -36,11 +41,10 @@ body{
 
 .header-content{
     display: flex;
+    flex: 1;
     align-items: flex-start;
-    justify-content: center;
-    gap: 100px;
-    margin: 50px 50px;
-    height: 270px;
+    justify-content: space-evenly;
+    gap: 50px;
 }
 
 .header-content .title{
@@ -53,31 +57,37 @@ a{
     color: #e5e7eb;
 }
 
-p{
+.main p{
     font-size: 18px;
     color: #e5e7eb;
+    flex-shrink: 1;
 }
 
-.test{
+.main{
     flex: 1;
 }
 
-.test h1{
+.main h1{ 
     margin-top: 0;
 }
 
 .image-container{
-    display: flex;
     flex: 1;
+    display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    min-width: auto;
 }
 
-img{
-    height: 250px;
-    width: auto;
+.image-container img{
+    flex: 1 3 0;
+    height: auto;
+    width: 300px;
     border-radius: 15px;
     border: 5px solid grey;
+    object-fit: contain;
+    max-width: 400px;
+    max-height: auto;
 }
 
 ul{
@@ -87,12 +97,46 @@ ul{
     gap: 10px;
     padding: 0;
 }
-
 .listimages img{
     max-width: 100px;
     max-height: 100px;
+    border-radius: 15px;
+    border: 5px solid #3882f6;
 }
 
 .information-text{
     text-align: center;
+    font-size: 36px;
+    font-weight: 900px;
+    color: #1f2937;
+}
+
+.listimages p{
+    text-align: center;
+}
+
+.page{
+    margin: 0 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+.button {
+    background-color: #3882f6;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 15%;
+}
+
+img{
+    height: 200px;
+    width: 200px;
 }
