--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body{
     display: flex;
     flex-direction: column;
     gap: 25px;
-    height: 400px;
     background-color: #1f2937;
+    padding-bottom: 50px;
 }
 .header{
     display: flex;
@@ -37,7 +37,7 @@ body{
 .header-content{
     display: flex;
     flex: 1;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
     gap: 50px;
     margin: 0 10%;
@@ -157,6 +157,7 @@ img{
 
 .banner{
     display: flex;
+    align-items: center;
     gap: 50px;
     padding: 15px 70px;
     background-color: #3882f6;
@@ -165,7 +166,6 @@ img{
 }
 
 .banner-button{
-    align-self: center;
     background-color: #3882f6;
     color: #f9faf8;
     border: 3px solid #f9faf8;
